[package]
name = "overlap-chunk"
version = "0.0.1"
edition = "2024"
authors = ["Katsuhiro Honda<freewave3@gmail.com>"]
description = "A library for chunking text with configurable overlap"
license = "MIT"
repository = "https://github.com/e-bebe/overlap-chunk"
keywords = ["text", "chunking", "overlap"]
categories = ["text-processing"]

[lib]
name = "overlap_chunk"
path = "src/lib.rs"

[[bin]]
name = "overlap-chunk"
path = "src/bin/overlap-chunk.rs"